[tool.poetry]
name = "aarch64-dep-reproducer"
version = "0.1.0"
description = ""
authors = ["Stefan Hansson <newbyte@postmarketos.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
watchdog = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
